# trading-platform-order

./: CHANGELOG.md  CONTRIBUTING.md  Dockerfile.dashboard  Dockerfile.dashboard-v2  README.md  docker-compose.dashboard-v2.yml  docker-compose.dashboard.yml  package-lock.json  package.json  playwright.config.ts  pyproject.toml  vultr.md  vultr2.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  design_update.md  feature_request.md
.github/workflows/: playwright.yml
.specify/memory/: constitution.md
config/: .env.example
docs/: DASHBOARD_SPEC.md  DESIGN_SYSTEM.md  DETAILED_SPEC.md  EXCHANGE_API.md  GIT_WORKFLOW.md  RISK_MANAGEMENT.md
specs/002-web-dashboard/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/002-web-dashboard/checklists/: requirements.md
specs/002-web-dashboard/contracts/: dashboard-components.md  emergency-stop-api.md
specs/003-dashboard-enhancement/: plan.md  spec.md  tasks.md
src/: __init__.py
src/dashboard/: __init__.py  app.py
src/dashboard/components/: __init__.py  emergency_panel.py  kimp_chart.py  pnl_card.py  position_card.py  system_status.py  trade_history.py
src/dashboard/services/: __init__.py  (+1 more)
src/dashboard_v2/: __init__.py  config.py  main.py
strategies/kimchi_premium/: ORDER_EXECUTION.md
tests/e2e/: components.spec.ts  dashboard.spec.ts  emergency.spec.ts
tests/integration/: test_dashboard_api.py
tests/unit/: test_dashboard_app.py  test_emergency_service.py  test_health_service.py  test_kimp_service.py  test_pnl_service.py  test_position_service.py
(+30 files in other folders)
