[project]
name = "trading-platform-order"
version = "0.1.0"
description = "완전 자동 주문 실행 시스템"
requires-python = ">=3.11"

dependencies = [
    "python-binance>=1.0.19",
    "pyupbit>=0.2.33",
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "supabase>=2.0.0",
    "python-dotenv>=1.0.0",
    "loguru>=0.7.0",
    "pydantic>=2.0.0",
    "httpx>=0.25.0",
    "aiohttp>=3.9.0",
    # Dashboard V2 dependencies
    "fastapi>=0.104.0",
    "uvicorn>=0.24.0",
    "jinja2>=3.1.0",
    "python-multipart>=0.0.6",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
]
dashboard = [
    "fastapi>=0.104.0",
    "uvicorn>=0.24.0",
    "jinja2>=3.1.0",
    "python-multipart>=0.0.6",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
